# ldap2any

./: Makefile.in  README.md  configure.ac
etc/: ldap2any.conf
lib/: Makefile
lib/LDAP2Any/: Entry.pm  Mapper.pm
lib/LDAP2Any/Mapper/: Base.pm  TextFile.pm
mapper/: Makefile  group.pm  passwd.pm
